Update Supply Usage Analysis.ipynb
Update contact info

--- a/data-science/supply-usage/Supply Usage Analysis.ipynb
+++ b/data-science/supply-usage/Supply Usage Analysis.ipynb
@@ -53,7 +53,7 @@
     "```\n",
     "\n",
     "# Sending your solution\n",
-    "Once you're done, export your solution to a python file (File > Download as > Python), and send it to matt@carta.healthcare.\n",
+    "Once you're done, export your solution to a python file (File > Download as > Python), and send it to careers@carta.healthcare.\n",
     "\n",
     "Feel free to reach out if you have questions along the way!"
    ]
